src/clippercapi/cpp/clippercapi.h

CAPI int ClipType_NoClip(void);
CAPI int ClipType_Intersection(void);
CAPI int ClipType_Union(void);
CAPI int ClipType_Difference(void);
CAPI int ClipType_Xor(void);
CAPI int FillRule_EvenOdd(void);
CAPI int FillRule_NonZero(void);