src/main/java/com/loadingbyte/cinecred/natives/clippercapi/clippercapi_h.java

// Generated by jextract

package com.loadingbyte.cinecred.natives.clippercapi;

import java.lang.invoke.*;
import java.lang.foreign.*;
import java.nio.ByteOrder;
import java.util.*;
import java.util.function.*;
import java.util.stream.*;

import static java.lang.foreign.ValueLayout.*;
import static java.lang.foreign.MemoryLayout.PathElement.*;

public class clippercapi_h extends clippercapi_h$shared {

    clippercapi_h() {
        // Should not be called directly
    }

    static final Arena LIBRARY_ARENA = Arena.ofAuto();

    static final SymbolLookup SYMBOL_LOOKUP = SymbolLookup.loaderLookup()
            .or(Linker.nativeLinker().defaultLookup());

    private static final int true_ = (int)1L;
    /**
     * {@snippet lang=c :
     * #define true 1
     * }
     */
    public static int true_() {
        return true_;
    }
    private static final int false_ = (int)0L;
    /**
     * {@snippet lang=c :
     * #define false 0
     * }
     */
    public static int false_() {
        return false_;
    }
    private static final int __bool_true_false_are_defined = (int)1L;
    /**
     * {@snippet lang=c :
     * #define __bool_true_false_are_defined 1
     * }
     */
    public static int __bool_true_false_are_defined() {
        return __bool_true_false_are_defined;
    }

    private static class ClipType_NoClip {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            clippercapi_h.C_INT    );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("ClipType_NoClip");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int ClipType_NoClip()
     * }
     */
    public static FunctionDescriptor ClipType_NoClip$descriptor() {
        return ClipType_NoClip.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int ClipType_NoClip()
     * }
     */
    public static MethodHandle ClipType_NoClip$handle() {
        return ClipType_NoClip.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int ClipType_NoClip()
     * }
     */
    public static MemorySegment ClipType_NoClip$address() {
        return ClipType_NoClip.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int ClipType_NoClip()
     * }
     */
    public static int ClipType_NoClip() {
        var mh$ = ClipType_NoClip.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("ClipType_NoClip");
            }
            return (int)mh$.invokeExact();
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class ClipType_Intersection {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            clippercapi_h.C_INT    );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("ClipType_Intersection");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int ClipType_Intersection()
     * }
     */
    public static FunctionDescriptor ClipType_Intersection$descriptor() {
        return ClipType_Intersection.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int ClipType_Intersection()
     * }
     */
    public static MethodHandle ClipType_Intersection$handle() {
        return ClipType_Intersection.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int ClipType_Intersection()
     * }
     */
    public static MemorySegment ClipType_Intersection$address() {
        return ClipType_Intersection.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int ClipType_Intersection()
     * }
     */
    public static int ClipType_Intersection() {
        var mh$ = ClipType_Intersection.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("ClipType_Intersection");
            }
            return (int)mh$.invokeExact();
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class ClipType_Union {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            clippercapi_h.C_INT    );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("ClipType_Union");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int ClipType_Union()
     * }
     */
    public static FunctionDescriptor ClipType_Union$descriptor() {
        return ClipType_Union.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int ClipType_Union()
     * }
     */
    public static MethodHandle ClipType_Union$handle() {
        return ClipType_Union.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int ClipType_Union()
     * }
     */
    public static MemorySegment ClipType_Union$address() {
        return ClipType_Union.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int ClipType_Union()
     * }
     */
    public static int ClipType_Union() {
        var mh$ = ClipType_Union.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("ClipType_Union");
            }
            return (int)mh$.invokeExact();
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class ClipType_Difference {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            clippercapi_h.C_INT    );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("ClipType_Difference");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int ClipType_Difference()
     * }
     */
    public static FunctionDescriptor ClipType_Difference$descriptor() {
        return ClipType_Difference.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int ClipType_Difference()
     * }
     */
    public static MethodHandle ClipType_Difference$handle() {
        return ClipType_Difference.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int ClipType_Difference()
     * }
     */
    public static MemorySegment ClipType_Difference$address() {
        return ClipType_Difference.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int ClipType_Difference()
     * }
     */
    public static int ClipType_Difference() {
        var mh$ = ClipType_Difference.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("ClipType_Difference");
            }
            return (int)mh$.invokeExact();
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class ClipType_Xor {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            clippercapi_h.C_INT    );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("ClipType_Xor");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int ClipType_Xor()
     * }
     */
    public static FunctionDescriptor ClipType_Xor$descriptor() {
        return ClipType_Xor.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int ClipType_Xor()
     * }
     */
    public static MethodHandle ClipType_Xor$handle() {
        return ClipType_Xor.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int ClipType_Xor()
     * }
     */
    public static MemorySegment ClipType_Xor$address() {
        return ClipType_Xor.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int ClipType_Xor()
     * }
     */
    public static int ClipType_Xor() {
        var mh$ = ClipType_Xor.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("ClipType_Xor");
            }
            return (int)mh$.invokeExact();
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class FillRule_EvenOdd {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            clippercapi_h.C_INT    );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("FillRule_EvenOdd");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int FillRule_EvenOdd()
     * }
     */
    public static FunctionDescriptor FillRule_EvenOdd$descriptor() {
        return FillRule_EvenOdd.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int FillRule_EvenOdd()
     * }
     */
    public static MethodHandle FillRule_EvenOdd$handle() {
        return FillRule_EvenOdd.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int FillRule_EvenOdd()
     * }
     */
    public static MemorySegment FillRule_EvenOdd$address() {
        return FillRule_EvenOdd.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int FillRule_EvenOdd()
     * }
     */
    public static int FillRule_EvenOdd() {
        var mh$ = FillRule_EvenOdd.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("FillRule_EvenOdd");
            }
            return (int)mh$.invokeExact();
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class FillRule_NonZero {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            clippercapi_h.C_INT    );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("FillRule_NonZero");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int FillRule_NonZero()
     * }
     */
    public static FunctionDescriptor FillRule_NonZero$descriptor() {
        return FillRule_NonZero.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int FillRule_NonZero()
     * }
     */
    public static MethodHandle FillRule_NonZero$handle() {
        return FillRule_NonZero.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int FillRule_NonZero()
     * }
     */
    public static MemorySegment FillRule_NonZero$address() {
        return FillRule_NonZero.ADDR;
    }
